# wallpaper-switcher

./: Cargo.toml  README.md  build.rs  config.txt
src/: config.rs  main.rs  scanner.rs  state.rs  wallpaper.rs
