[package]
name = "paper-change"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
wallpaper = "3.2"
walkdir = "2.5"
anyhow = "1.0"
tray-icon = "0.22.0"
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
rand = "0.10.0"
image = "0.25.10"

[build-dependencies]
winres = "0.1"

[profile.release]
windows-subsystem = "windows"
